java 20 deprecation fix